# Recto

./: .env.example  .gitignore  .vercelignore  index.html  package-lock.json  package.json  recto.iss  tailwind.config.ts  vercel.json  vite.config.ts
bench/: bench.html  index.mjs  package-lock.json  package.json
docs/: native-pipeline-architecture.md  native-streaming-worklog.md  velocity-integration-plan.md
locales/: de.json  en.json  es.json  fr.json  it.json
scripts/: build-setup.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.recto.conf.json  tauri.dev.verso.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: amf_probe.rs  audio_probe.rs  capture_probe.rs  encode_probe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  capture.rs  gamepad.rs  hw_encoder.rs  input.rs  lib.rs  main.rs  velocity.rs  velocity_transport.rs
src-tauri/src/encoder/: amf_direct.rs  color_convert.rs  media_foundation.rs  mod.rs
src/components/: BackButton.tsx  DiscordIcon.tsx  PeerBadge.tsx  PreferencesDrawer.tsx  SessionCode.tsx  ThemeToggle.tsx  TitleBar.tsx  VideoDisplay.tsx
src/context/: AuthContext.tsx  RectoSessionContext.tsx  SettingsContext.tsx  ThemeContext.tsx  useAuth.ts
src/lib/: authStorage.ts  gamepad.ts  identity.ts  settings.ts  signaling.ts  supabase.ts  virtualGamepad.ts  webrtc.ts
src/pages/: AuthCallback.tsx  Home.tsx  LoginPage.tsx  RectoPage.tsx  SettingsPage.tsx  VersoPage.tsx
src/tests/: input.test.ts  sdp.test.ts  setup.ts  signaling.test.ts  stream.test.ts  webrtc.test.ts
supabase/: schema.sql
web/: .env.example  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  manifest.ts  page.tsx
web/app/(app)/: layout.tsx
web/app/(app)/oauth/consent/: page.tsx
web/app/(app)/settings/: page.tsx
web/app/(app)/verso/: page.tsx
web/app/api/oauth/authorize/: route.ts
web/app/auth/callback/: route.ts
web/app/auth/desktop-callback/: page.tsx
web/app/login/: LoginButton.tsx  page.tsx
web/app/oauth/consent/: page.tsx
web/app/verso/: page.tsx
web/components/: BackButton.tsx  DiscordIcon.tsx  MainContent.tsx  PeerBadge.tsx  PreferencesDrawer.tsx  StatsOverlay.tsx  ThemeProvider.tsx  ThemeToggle.tsx  UserMenu.tsx  VideoDisplay.tsx
web/lib/: signaling.ts  supabase-browser.ts  supabase-server.ts  supabase.ts  webSettings.ts  webrtc.ts
