[package]
name = "recto"
version = "0.1.0"
description = "Recto — remote desktop streaming"
authors = []
edition = "2021"

[lib]
name = "recto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_Media_MediaFoundation",
] }
vigem-client = "0.1"

# Probe phase 1 du pipeline natif : mesure le FPS réel de la capture DXGI
# Desktop Duplication (vs ~20 fps de getDisplayMedia). Lancer avec :
#   cargo run --example capture_probe --manifest-path src-tauri/Cargo.toml
[[example]]
name = "capture_probe"
path = "examples/capture_probe.rs"

# Probe phase 2 (étape A) : prouve l'accès au MFT encodeur H264 matériel du
# vendeur GPU (AMD) via Media Foundation. Lancer avec :
#   cargo run --example encode_probe --manifest-path src-tauri/Cargo.toml
[[example]]
name = "encode_probe"
path = "examples/encode_probe.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
